# gxde-top-panel

./: .gitignore  CMakeLists.txt  GxdeTopPanelConfig.cmake.in  build-deb  deb.cmake  gxde-top-panel.desktop  gxde-top-panel.pc.in
appmenu/: CMakeLists.txt  appmenumodel.cpp  appmenumodel.h  dbusmenuimporter.cpp  menuimporteradaptor.h
debian/: changelog  control  gxde-top-panel-dev.install  gxde-top-panel.install
debian-cmake/scripts/: postinst
frame/: CMakeLists.txt  main.cpp
frame/controller/: dockitemmanager.cpp  dockitemmanager.h  dockpluginscontroller.cpp
frame/dbus/: dockinterface.cpp  dockinterface.h
frame/item/: dockitem.cpp  dockitem.h  pluginsitem.cpp  pluginsitem.h
frame/panel/: MainPanelControl.cpp
frame/util/: CustomSettings.cpp  TopPanelSettings.cpp  TopPanelSettings.h  XUtils.cpp  XUtils.h  abstractpluginscontroller.cpp  abstractpluginscontroller.h  dockpopupwindow.cpp  dockpopupwindow.h  imagefactory.cpp  utils.h
frame/window/: MainWindow.cpp  MainWindow.h
frame/xcb/: xcb_misc.cpp  xcb_misc.h
translations/: gxde-top-panel_zh_CN.ts
widgets/: ActiveWindowControlWidget.cpp  ActiveWindowControlWidget.h  QClickableLabel.cpp  QClickableLabel.h  QOperationWidget.cpp  mainsettingwidget.ui  tipswidget.cpp
